# audacious-usf-plugin

./: .gitignore  Makefile  README.md  acinclude.m4  configure.ac
src/: Makefile
src/usf/: Makefile  audio.c  audio.h  audio_hle.h  audio_hle_main.c  audio_hle_main.cc  audio_ucode1.c  audio_ucode1.cc  audio_ucode2.c  audio_ucode3.c  audio_ucode3mp3.cc  cpu.c  cpu.cc  cpu.h  dma.c  dma.h  exception.c  exception.h  interpreter_cpu.cc  interpreter_cpu.h  interpreter_ops.c  interpreter_ops.cc  interpreter_ops.h  main.c  main.cc  main.h  memory.c  memory.cc  memory.h  opcode.h  pif.c  pif.cc  pif.h  plugin.cc  plugin.h  psftag.c  psftag.h  recompiler_cpu.c  recompiler_cpu.cc  recompiler_cpu.h  (+37 more)
